ハンバーガーメニュー修正

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,10 @@ li {
   color: black;
   background-color: gray;
 }
+.navbar-light .navbar-toggler {
+  border-color: rgba(0,0,0,0);
+}
+
 /*-------------------------------
             main
 -------------------------------*/
