--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,5 +1,5 @@
-body {
-  font-family: 'Montserrat', sans-serif;
+body {  
+font-family: 'Montserrat', sans-serif;
 }
 a {
   text-decoration: none;
@@ -15,6 +15,10 @@ li {
 }
 .relative {
   position: relative;
+}
+
+.fs-newsletter{
+  letter-spacing: 15px;
 }
 /*-------------------------------
             header
@@ -36,7 +40,6 @@ li {
 .navbar-light .navbar-toggler {
   border-color: rgba(0,0,0,0);
 }
-
 /*-------------------------------
             main
 -------------------------------*/
@@ -46,7 +49,7 @@ li {
   height: 100vh;
 }
 .carousel-1 {
-  background-image: url(./images/carousel_1.jpg);
+  background-image: url(./images/carousel_1.jpg);  
 }
 .carousel-2 {
   background-image: url(./images/carousel_2.jpg);
@@ -66,10 +69,10 @@ li {
 }
 /* カルーセルテキストスタイル　*/
 .carousel-caption {
-  height: 350px;
+  height: 400px;
 }
 .carousel-caption h1 {
-  font-size: 50px;
+  font-size: 90px;
   font-weight: bolder;
   letter-spacing: 30px;
   
@@ -78,6 +81,16 @@ li {
   color: rgba(249, 249, 249, 0.8);
   text-shadow: 1px 2px 10px #a3a3a3;
 }
+.fs-carousel-text1{
+  font-family: 'Caveat', cursive;
+  font-family: 'Pacifico', cursive;
+  font-family: 'Parisienne', cursive;
+  font-size: 80px
+}
+.fs-carousel-text2{
+  font-size: 20px
+}
+
 /*-------------------------------
            フォント関連
 -------------------------------*/
