carousel1画像差し替え

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,7 @@ li {
   height: 100vh;
 }
 .carousel-1 {
-  background-image: url(./images/carousel_1.jpg);  
+  background-image: url(./images/carousel_1_1920.jpg);  
 }
 .carousel-2 {
   background-image: url(./images/carousel_2.jpg);
