--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,6 +62,18 @@ li {
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
+.carousel-style::before{
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0,0,0,0.5);
+  }
+.gray-backimg{
+  background-color: rgba(0, 0, 0, 0.6);
+}
 #main .carousel-control-prev,
 .carousel-control-next {
   background-color: rgba(173, 216, 230, 0);
@@ -79,7 +91,7 @@ li {
 }
 .fs-slide1,.fs-slide2,.fs-slide3 {
   color: rgba(249, 249, 249, 0.8);
-  text-shadow: 1px 2px 10px #a3a3a3;
+  
 }
 .fs-carousel-text1{
   font-family: 'Caveat', cursive;
